--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.20.2
+  page_transition: ^2.2.1
+  stacked: ^3.4.4
 
 dev_dependencies:
   flutter_test:
